# prestamos-gota-a-gota

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  run.py
.cursor/rules/: reglas-gota-gota.mdc
Prestamos Gota a Gota/: settings.gradle.kts
Prestamos Gota a Gota/.fleet/: receipt.json
Prestamos Gota a Gota/composeApp/: build.gradle.kts
Prestamos Gota a Gota/composeApp/src/androidMain/kotlin/org/vacnar/prestamosgotaagota/: MainActivity.kt  Platform.android.kt
Prestamos Gota a Gota/composeApp/src/androidMain/res/values/: strings.xml
Prestamos Gota a Gota/composeApp/src/commonMain/kotlin/org/vacnar/prestamosgotaagota/: App.kt  Greeting.kt  Platform.kt
Prestamos Gota a Gota/composeApp/src/desktopMain/kotlin/org/vacnar/prestamosgotaagota/: Platform.jvm.kt  main.kt
Prestamos Gota a Gota/iosApp/Configuration/: Config.xcconfig
Prestamos Gota a Gota/iosApp/iosApp.xcodeproj/: project.pbxproj
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  cliente.py  cobranza.py  notificacion.py  pago.py  prestamo.py  rol.py  ruta.py  usuario.py
app/routers/: __init__.py  auth.py  clientes.py  cobranza.py  notificaciones.py  pagos.py  prestamos.py  rutas.py  usuarios.py
app/schemas/: __init__.py  cliente.py  cobranza.py  notificacion.py  pago.py  prestamo.py  ruta.py  usuario.py
app/utils/: __init__.py  auth.py  notificaciones.py  notification_providers.py
tests/: README.md  __init__.py  conftest.py  test_notificaciones.py
(+2 files in other folders)
