[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prestamos-gota-a-gota"
version = "0.1.0"
description = "Sistema de gestión de préstamos gota a gota"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Tu Nombre", email = "tu@email.com" },
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "alembic>=1.7.0",
    "email-validator>=1.1.3",
    "twilio>=8.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "black>=21.7b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "mypy>=0.910",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 